--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Eleve tu negocio digital a otro nivel 
                 <strong class="titulo-destaque">con un Front-end de calidad!
                 </strong></h1>
-                <p class="presentacion__contenido__texto">¡Hola! Soy Ana García, desarrolladora Front-end con
+                <p class="presentacion__contenido__texto">¡Hola! Soy Genesis Sanchez, desarrolladora Front-end con
                     especialización en React, HTML y CSS. Ayudo a pequeños
                     negocios y diseñadores a llevar a cabo buenas ideas.
                     ¿Hablamos?
@@ -29,11 +29,11 @@
                 </p>
                 <div class="presentacion__enlaces">
                     <h2 class="presentacion__enlaces__subtitulo">Accede a mis redes</h2>
-                    <a class="presentacion__enlaces__link" href="https://github.com/">
+                    <a class="presentacion__enlaces__link" href="https://github.com/GenesisSH/">
                         <img src="./assets/github.png">
                         Github
                     </a>
-                    <a class="presentacion__enlaces__link" href="https://linkedin.com/in/">
+                    <a class="presentacion__enlaces__link" href="https://www.linkedin.com/in/genesis-sanchez-huaman-13a086318/">
                         <img src="./assets/linkedin.png">
                         Linkedin
                     </a>
